# fplotd

./: Cargo.toml  README.md  checkformat.rs  log10.rs  readdata.rs
src/: loge.rs  main.rs  plotd.rs  readdata.rs
